--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"test": "jest"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/svelte": "^3.1.3",
 		"@types/jest": "^28.1.2",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -21,6 +23,7 @@
 		"eslint": "^8.16.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"jest": "^28.1.1",
+		"jest-environment-jsdom": "^28.1.1",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-jester": "^2.3.2",
