--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"jest": "^28.1.1",
 		"jest-environment-jsdom": "^28.1.1",
+		"sass": "^1.52.3",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-jester": "^2.3.2",
