--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"graphql": "^16.5.0"
+	}
 }
