--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
 		"test": "jest",
-		"doc": "jsdoc -c jsdoc.json"
+		"doc": "jsdoc -c jsdoc.json",
+		"deploy:doc": "gh-pages -d docs"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
@@ -24,6 +25,7 @@
 		"better-docs": "^2.7.2",
 		"eslint": "^8.16.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"gh-pages": "^4.0.0",
 		"jest": "^28.1.1",
 		"jest-environment-jsdom": "^28.1.1",
 		"jsdoc": "^3.6.10",
@@ -38,7 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"graphql": "^16.5.0",
-		"eslint-config-airbnb-typescript": "^17.0.0"
+		"eslint-config-airbnb-typescript": "^17.0.0",
+		"graphql": "^16.5.0"
 	}
 }
