--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
 		"test": "jest",
-		"doc": "jsdoc -c jsdoc.json",
-		"deploy:doc": "gh-pages -d docs"
+		"doc": "jsdoc -c jsdoc.json & gh-pages -d docs"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
