--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
-		"test": "jest",
+		"test": "jest --verbose",
 		"doc": "jsdoc -c jsdoc.json & gh-pages -d docs",
 		"start": "node build/index.js"
 	},
