--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
 		"test": "jest --verbose",
+		"coverage": "npm run test -- --coverage",
 		"doc": "jsdoc -c jsdoc.json & gh-pages -d docs",
 		"start": "node build/index.js"
 	},
