--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/youtube-player": "^5.5.6",
 		"eslint-config-airbnb-typescript": "^17.0.0",
-		"graphql": "^16.5.0"
+		"graphql": "^16.5.0",
+		"youtube-player": "^5.5.2"
 	}
 }
