--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,23 +1,28 @@
-name: Pull Request
+name: Test Before Merging
 
 on:
   pull_request:
     branches: [main]
 
 jobs:
-  name: Run EsLint and Test
   runs-on: ubuntu-latest
   strategy:
-    matrix:
-      node-version: [16.x]
-  step:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{matrix.node-version}}
-      use: actions/setup-node@v1
-      with:
-        node-version: ${{matrix.node-version}}
-    - run: npm i
-    - run: npm run build --if-present
-    - run: npm run lint
-    - run: npm run test
+    build:
+      runs-on: ubuntu-latest
+
+      strategy:
+        matrix:
+          node-version: [16.x]
+
+      steps:
+        - uses: actions/checkout@v1
+        - name: Use Node.js ${{matrix.node-version}}
+          uses: actions/setup-node@v1
+          with:
+            node-version: ${{matrix.node-version}}
+        - name: npm install, build, and test
+        - run: npm install
+        - run: npm run lint
+        - run: npm run test
+
 
