install lint-staged

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
+		"prepare": "husky install",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
@@ -27,9 +27,11 @@
 		"eslint": "^8.16.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"gh-pages": "^4.0.0",
+		"husky": "^8.0.1",
 		"jest": "^28.1.1",
 		"jest-environment-jsdom": "^28.1.1",
 		"jsdoc": "^3.6.10",
+		"lint-staged": "^13.0.3",
 		"sass": "^1.52.3",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
@@ -43,5 +45,8 @@
 	"dependencies": {
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"graphql": "^16.5.0"
+	},
+	"lint-staged": {
+		"*.{ts, svelte}": "eslint --cache --fix"
 	}
 }
