--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/svelte": "^3.1.3",
 		"@types/jest": "^28.1.2",
+		"@types/jest-plugin-context": "^2.9.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"better-docs": "^2.7.2",
@@ -31,6 +32,7 @@
 		"husky": "^8.0.1",
 		"jest": "^28.1.1",
 		"jest-environment-jsdom": "^28.1.1",
+		"jest-plugin-context": "^2.9.0",
 		"jsdoc": "^3.6.10",
 		"lint-staged": "^13.0.3",
 		"sass": "^1.52.3",
