--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@types/youtube-player": "^5.5.6",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"graphql": "^16.5.0",
+		"svelte-horizontal-scroller": "^1.0.1",
 		"youtube-player": "^5.5.2"
 	},
 	"lint-staged": {
