--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,6 +24,6 @@ jobs:
       - run: npm i
       - run: npm run build --if-present
       - run: npm run lint
-      - run: npm run test
+#      - run: npm run test
 
 
