--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@types/youtube-player": "^5.5.6",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"graphql": "^16.5.0",
+		"svelte-device-info": "^1.0.0",
 		"youtube-player": "^5.5.2"
 	},
 	"lint-staged": {
