--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/javascript-time-ago": "^2.0.3",
 		"@types/youtube-player": "^5.5.6",
 		"eslint-config-airbnb-typescript": "^17.0.0",
 		"graphql": "^16.5.0",
+		"javascript-time-ago": "^2.5.6",
 		"svelte-device-info": "^1.0.0",
 		"swiper": "^8.2.6",
 		"youtube-player": "^5.5.2"
