svelte-navigator 설치

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@typescript-eslint/parser": "^5.27.0",
 		"better-docs": "^2.7.2",
 		"eslint": "^8.16.0",
+		"eslint-config-airbnb-typescript": "^17.0.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"gh-pages": "^4.0.0",
 		"husky": "^8.0.1",
@@ -47,9 +48,9 @@
 	"type": "module",
 	"dependencies": {
 		"@types/youtube-player": "^5.5.6",
-		"eslint-config-airbnb-typescript": "^17.0.0",
 		"graphql": "^16.5.0",
 		"svelte-device-info": "^1.0.0",
+		"svelte-navigator": "^3.1.6",
 		"swiper": "^8.2.6",
 		"youtube-player": "^5.5.2"
 	},
