--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"svelte-check": "^2.7.1",
 		"svelte-jester": "^2.3.2",
 		"svelte-preprocess": "^4.10.6",
+		"svelte-time": "^0.7.1",
 		"ts-jest": "^28.0.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
