main branch 배포 막음

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -47,15 +47,15 @@ jobs:
           gcloud --quiet auth configure-docker asia-northeast3-docker.pkg.dev
 
       # Build and Deploy Docker Image
-      - name: PROD - Build
-        run: |-
-          gcloud builds submit \
-            --tag "asia-northeast3-docker.pkg.dev/$PROJECT_ID/$ARTIFACT_REGISTRY_REPO_NAME/$IMAGE" --timeout "2h15m5s"
-      - name: PROD - Deploy to Cloud Run
-        id: deploy
-        uses: google-github-actions/deploy-cloudrun@main
-        with:
-          service: ${{ env.SERVICE_ID }}
-          region: ${{ env.ZONE }}
-          image: asia-northeast3-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY_REPO_NAME }}/${{ env.IMAGE }}:latest
-          credentials: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+#      - name: PROD - Build
+#        run: |-
+#          gcloud builds submit \
+#            --tag "asia-northeast3-docker.pkg.dev/$PROJECT_ID/$ARTIFACT_REGISTRY_REPO_NAME/$IMAGE" --timeout "2h15m5s"
+#      - name: PROD - Deploy to Cloud Run
+#        id: deploy
+#        uses: google-github-actions/deploy-cloudrun@main
+#        with:
+#          service: ${{ env.SERVICE_ID }}
+#          region: ${{ env.ZONE }}
+#          image: asia-northeast3-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.ARTIFACT_REGISTRY_REPO_NAME }}/${{ env.IMAGE }}:latest
+#          credentials: ${{ secrets.GCP_SERVICE_ACCOUNT }}
