완전히 주석처리

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -28,25 +28,25 @@ jobs:
       - run: npm run build --if-present
       - run: npm run lint
 #      - run: npm test
-  deploy-to-artifact:
-    needs: test
-    name: PROD - Deploy to GCP
-    runs-on: ubuntu-latest
-    environment: production
-
-    steps:
-      - name: PROD - Checkout
-        uses: actions/checkout@v2
-
-      - uses: google-github-actions/setup-gcloud@v0.2.0
-        with:
-          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      - run: |-
-          gcloud --quiet auth configure-docker asia-northeast3-docker.pkg.dev
-
-      # Build and Deploy Docker Image
+#  deploy-to-artifact:
+#    needs: test
+#    name: PROD - Deploy to GCP
+#    runs-on: ubuntu-latest
+#    environment: production
+#
+#    steps:
+#      - name: PROD - Checkout
+#        uses: actions/checkout@v2
+#
+#      - uses: google-github-actions/setup-gcloud@v0.2.0
+#        with:
+#          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+#          project_id: ${{ secrets.GCP_PROJECT_ID }}
+#
+#      - run: |-
+#          gcloud --quiet auth configure-docker asia-northeast3-docker.pkg.dev
+#
+#      # Build and Deploy Docker Image
 #      - name: PROD - Build
 #        run: |-
 #          gcloud builds submit \
