--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -2,7 +2,7 @@ name: PROD - Build and Deploy to GCP
 
 on:
   push:
-    branches: [none]
+    branches: [main]
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
