--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"svelte-device-info": "^1.0.0",
 		"svelte-navigator": "^3.1.6",
 		"swiper": "^8.2.6",
+		"youtube-notification": "^1.1.0",
 		"youtube-player": "^5.5.2"
 	},
 	"lint-staged": {
